@@ -13,6 +13,9 @@
  
 package org.ejbca.core.model.ca.caadmin.extendedcaservices;
 
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.Serializable;
 import java.io.UnsupportedEncodingException;
 import java.security.KeyPair;
 import java.security.KeyStore;
@@ -24,8 +27,12 @@ import java.util.HashMap;
 import java.util.List;
 
 import org.apache.log4j.Logger;
+import org.apache.xml.security.c14n.Canonicalizer;
 import org.apache.xml.security.exceptions.XMLSecurityException;
+import org.apache.xml.security.signature.XMLSignature;
 import org.apache.xml.security.signature.XMLSignatureException;
+import org.apache.xml.security.transforms.Transforms;
+import org.apache.xml.security.utils.Constants;
 import org.ejbca.config.EjbcaConfiguration;
 import org.ejbca.core.model.InternalResources;
 import org.ejbca.core.model.ca.caadmin.CA;
@@ -39,26 +46,24 @@ import org.ejbca.util.StringTools;
 import org.ejbca.util.keystore.KeyTools;
 import org.w3c.dom.Document;
 
-
-
 /** Handles and maintains the CA-part of the XKMS functionality.
  *  The service have it's own certificate used for signing and encryption 
  * 
  * @author Philip Vendil
  * @version $Id$
  */
-public class XKMSCAService extends ExtendedCAService implements java.io.Serializable{
+public class XKMSCAService extends ExtendedCAService implements Serializable {
 
     private static Logger m_log = Logger.getLogger(XKMSCAService.class);
     /** Internal localization of logs and errors */
     private static final InternalResources intres = InternalResources.getInstance();
 
-    public static final float LATEST_VERSION = 1; 
+    public static final float LATEST_VERSION = 2; 
     
     public static final String SERVICENAME = "XKMSCASERVICE";          
 
-    private PrivateKey      xKMSkey        = null;
-    private List            xKMScertificatechain  = null;
+    private PrivateKey xKMSkey = null;
+    private List<Certificate> xKMScertificatechain  = null;
     
     private XKMSCAServiceInfo info = null;  
     
@@ -70,144 +75,104 @@ public class XKMSCAService extends ExtendedCAService implements java.io.Serializ
     
 	private static final String PRIVATESIGNKEYALIAS = "privatesignkeyalias";   
 
-
-            
-    public XKMSCAService(ExtendedCAServiceInfo serviceinfo)  {
-      m_log.debug("XKMSCAService : constructor " + serviceinfo.getStatus()); 
-      CryptoProviderTools.installBCProvider();
-	  // Currently only RSA keys are supported
-      XKMSCAServiceInfo info = (XKMSCAServiceInfo) serviceinfo;	
-      data = new HashMap();   
-      data.put(EXTENDEDCASERVICETYPE, Integer.valueOf(ExtendedCAServiceInfo.TYPE_XKMSEXTENDEDSERVICE));
-
-	  data.put(KEYSPEC, info.getKeySpec());
-	  data.put(KEYALGORITHM, info.getKeyAlgorithm());
-	  setSubjectDN(info.getSubjectDN());
-	  setSubjectAltName(info.getSubjectAltName());                       
-	  setStatus(serviceinfo.getStatus());
-        
-      data.put(VERSION, new Float(LATEST_VERSION));
+	public XKMSCAService(final ExtendedCAServiceInfo serviceinfo) {
+		m_log.debug("XKMSCAService : constructor " + serviceinfo.getStatus());
+		CryptoProviderTools.installBCProviderIfNotAvailable();
+		// Currently only RSA keys are supported
+		final XKMSCAServiceInfo info = (XKMSCAServiceInfo) serviceinfo;
+		data = new HashMap();
+		data.put(ExtendedCAServiceInfo.IMPLEMENTATIONCLASS, this.getClass().getName());	// For integration with CESeCore
+		data.put(EXTENDEDCASERVICETYPE, Integer.valueOf(ExtendedCAServiceInfo.TYPE_XKMSEXTENDEDSERVICE));	// For current version of EJBCA
+		data.put(KEYSPEC, info.getKeySpec());
+		data.put(KEYALGORITHM, info.getKeyAlgorithm());
+		setSubjectDN(info.getSubjectDN());
+		setSubjectAltName(info.getSubjectAltName());
+		setStatus(serviceinfo.getStatus());
+		data.put(VERSION, new Float(LATEST_VERSION));
     }
     
-    public XKMSCAService(HashMap data) throws IllegalArgumentException, IllegalKeyStoreException {
-    	CryptoProviderTools.installBCProvider();
-      loadData(data);  
-      if(data.get(XKMSKEYSTORE) != null){    
-    	  // lookup keystore passwords
-    	  final String keystorepass = StringTools.passwordDecryption(EjbcaConfiguration.getCaXkmsKeyStorePass(), "ca.xkmskeystorepass");
-          int status = ExtendedCAServiceInfo.STATUS_INACTIVE;
-        try {
-        	m_log.debug("Loading XKMS keystore");
-            KeyStore keystore=KeyStore.getInstance("PKCS12", "BC");
-            keystore.load(new java.io.ByteArrayInputStream(Base64.decode(((String) data.get(XKMSKEYSTORE)).getBytes())),keystorepass.toCharArray());
-        	m_log.debug("Finished loading XKMS keystore");
-      
-            this.xKMSkey = (PrivateKey) keystore.getKey(PRIVATESIGNKEYALIAS, null);
-            // Due to a bug in Glassfish v1 (fixed in v2), we used to have to make sure all certificates in this 
-            // Array were of SUNs own provider, using CertTools.SYSTEM_SECURITY_PROVIDER.
-            // As of EJBCA 3.9.3 we decided that we don't have to support Glassfish v1 anymore.
-            this.xKMScertificatechain =  CertTools.getCertCollectionFromArray(keystore.getCertificateChain(PRIVATESIGNKEYALIAS), null);
-            status = getStatus();
-			try {
-				if (!keystore.getCertificate(PRIVATESIGNKEYALIAS).getPublicKey().equals(((Certificate)this.xKMScertificatechain.get(0)).getPublicKey())) {
-					m_log.error("Keystore does not hold the same public key as XKMS service certificate.");
-				}
-			} catch (Exception e2) {
-	        	m_log.error("Could not compare public keys. " + e2.getMessage());
-			}
-        } catch (Exception e) {
-        	m_log.error("Could not load keystore or certificate for CA XKMS service. Perhaps the password was changed? " + e.getMessage());
-		} finally {
-            this.info = new XKMSCAServiceInfo(status, getSubjectDN(), getSubjectAltName(), (String)data.get(KEYSPEC), 
-                    (String) data.get(KEYALGORITHM), this.xKMScertificatechain);
-        }
-        
-        data.put(EXTENDEDCASERVICETYPE, Integer.valueOf(ExtendedCAServiceInfo.TYPE_XKMSEXTENDEDSERVICE));        
-     } 
-   }
+    public XKMSCAService(final HashMap data) throws IllegalArgumentException, IllegalKeyStoreException {
+    	CryptoProviderTools.installBCProviderIfNotAvailable();
+    	loadData(data);
+    	if (data.get(XKMSKEYSTORE) != null) {
+    		// lookup keystore passwords
+    		final String keystorepass = StringTools.passwordDecryption(EjbcaConfiguration.getCaXkmsKeyStorePass(), "ca.xkmskeystorepass");
+    		int status = ExtendedCAServiceInfo.STATUS_INACTIVE;
+    		try {
+    			m_log.debug("Loading XKMS keystore");
+    			final KeyStore keystore = KeyStore.getInstance("PKCS12", "BC");
+    			keystore.load(new ByteArrayInputStream(Base64.decode(((String) data.get(XKMSKEYSTORE)).getBytes())), keystorepass.toCharArray());
+    			m_log.debug("Finished loading XKMS keystore");
+    			this.xKMSkey = (PrivateKey) keystore.getKey(PRIVATESIGNKEYALIAS, null);
+    			// Due to a bug in Glassfish v1 (fixed in v2), we used to have to make sure all certificates in this 
+    			// Array were of SUNs own provider, using CertTools.SYSTEM_SECURITY_PROVIDER.
+    			// As of EJBCA 3.9.3 we decided that we don't have to support Glassfish v1 anymore.
+    			this.xKMScertificatechain = CertTools.getCertCollectionFromArray(keystore.getCertificateChain(PRIVATESIGNKEYALIAS), null);
+    			status = getStatus();
+    			try {
+    				if (!keystore.getCertificate(PRIVATESIGNKEYALIAS).getPublicKey().equals(((Certificate)this.xKMScertificatechain.get(0)).getPublicKey())) {
+    					m_log.error("Keystore does not hold the same public key as XKMS service certificate.");
+    				}
+    			} catch (Exception e2) {
+    				m_log.error("Could not compare public keys. " + e2.getMessage());
+    			}
+    		} catch (Exception e) {
+    			m_log.error("Could not load keystore or certificate for CA XKMS service. Perhaps the password was changed? " + e.getMessage());
+    		} finally {
+    			this.info = new XKMSCAServiceInfo(status, getSubjectDN(), getSubjectAltName(), (String)data.get(KEYSPEC), 
+    					(String) data.get(KEYALGORITHM), this.xKMScertificatechain);
+    		}
+    		data.put(EXTENDEDCASERVICETYPE, Integer.valueOf(ExtendedCAServiceInfo.TYPE_XKMSEXTENDEDSERVICE));        
+    	} 
+    }
     
-    
+    @Override
+    public void init(final CA ca) throws Exception {
+    	m_log.trace(">init");
+    	// lookup keystore passwords      
+    	final String keystorepass = StringTools.passwordDecryption(EjbcaConfiguration.getCaXkmsKeyStorePass(), "ca.xkmskeystorepass");
+    	// Currently only RSA keys are supported
+    	final XKMSCAServiceInfo info = (XKMSCAServiceInfo) getExtendedCAServiceInfo();       
+    	// Create XKMS KeyStore	    
+    	final KeyStore keystore = KeyStore.getInstance("PKCS12", "BC");
+    	keystore.load(null, null);                              
+    	final KeyPair xKMSkeys = KeyTools.genKeys(info.getKeySpec(), info.getKeyAlgorithm());
+    	final UserDataVO user = new UserDataVO("NOUSERNAME", info.getSubjectDN(), 0, info.getSubjectAltName(), "NOEMAIL", 0,0,0,0, null,null,0,0,null);
+    	final Certificate xKMSCertificate = ca.generateCertificate(user, xKMSkeys.getPublic(),
+    			-1, // KeyUsage
+    			ca.getValidity(), new XKMSCertificateProfile(),
+    			null // sequence
+    	);
+    	xKMScertificatechain = new ArrayList<Certificate>();
+    	xKMScertificatechain.add(xKMSCertificate);
+    	xKMScertificatechain.addAll(ca.getCertificateChain());
+    	this.xKMSkey = xKMSkeys.getPrivate(); 	  	 	  
+    	keystore.setKeyEntry(PRIVATESIGNKEYALIAS,xKMSkeys.getPrivate(), null, (Certificate[]) xKMScertificatechain.toArray(new Certificate[xKMScertificatechain.size()]));              
+    	final ByteArrayOutputStream baos = new ByteArrayOutputStream();
+    	keystore.store(baos, keystorepass.toCharArray());
+    	data.put(XKMSKEYSTORE, new String(Base64.encode(baos.toByteArray())));      
+    	// Store XKMS KeyStore
+    	setStatus(info.getStatus());
+    	this.info = new XKMSCAServiceInfo(info.getStatus(), getSubjectDN(), getSubjectAltName(), (String)data.get(KEYSPEC), (String) data.get(KEYALGORITHM), xKMScertificatechain);
+    	m_log.trace("<init");
+    }   
 
-   /* 
-	* @see org.ejbca.core.model.ca.caadmin.extendedcaservices.ExtendedCAService#extendedService(org.ejbca.core.model.ca.caadmin.extendedcaservices.ExtendedCAServiceRequest)
-	*/   
-   public void init(CA ca) throws Exception {
-   	 m_log.trace(">init");
-	 // lookup keystore passwords      
-   	 final String keystorepass = StringTools.passwordDecryption(EjbcaConfiguration.getCaXkmsKeyStorePass(), "ca.xkmskeystorepass");
-   	 // Currently only RSA keys are supported
-	 XKMSCAServiceInfo info = (XKMSCAServiceInfo) getExtendedCAServiceInfo();       
-                  
-	 // Create XKMS KeyStore	    
-	 KeyStore keystore = KeyStore.getInstance("PKCS12", "BC");
-	 keystore.load(null, null);                              
-      
-	 KeyPair xKMSkeys = KeyTools.genKeys(info.getKeySpec(), info.getKeyAlgorithm());
-	   	  
-	 UserDataVO user = new UserDataVO("NOUSERNAME", 	                                          
-				info.getSubjectDN(),
-				0, 
-				info.getSubjectAltName(),
-				"NOEMAIL",
-				0,0,0,0, null,null,0,0,null);
-	 Certificate xKMSCertificate = ca.generateCertificate(
-			 user																																
-			,xKMSkeys.getPublic(),
-			-1, // KeyUsage
-			ca.getValidity(), 
-			new XKMSCertificateProfile(),
-			null // sequence
-			);
-	  
-	 xKMScertificatechain = new ArrayList();
-	 xKMScertificatechain.add(xKMSCertificate);
-	 xKMScertificatechain.addAll(ca.getCertificateChain());
-	 this.xKMSkey = xKMSkeys.getPrivate(); 	  	 	  
-	  	  	  
-     keystore.setKeyEntry(PRIVATESIGNKEYALIAS,xKMSkeys.getPrivate(),null,(Certificate[]) xKMScertificatechain.toArray(new Certificate[xKMScertificatechain.size()]));              
-     java.io.ByteArrayOutputStream baos = new java.io.ByteArrayOutputStream();
-     keystore.store(baos, keystorepass.toCharArray());
-     data.put(XKMSKEYSTORE, new String(Base64.encode(baos.toByteArray())));      
-     // Store XKMS KeyStore
-      
-	 setStatus(info.getStatus());
-	 this.info = new XKMSCAServiceInfo(info.getStatus(),
-									  getSubjectDN(),
-									  getSubjectAltName(), 
-									  (String)data.get(KEYSPEC), 
-									  (String) data.get(KEYALGORITHM),
-	                                  xKMScertificatechain);
-   	 m_log.trace("<init");
-   }   
+    @Override
+    public void update(final ExtendedCAServiceInfo serviceinfo, final CA ca) throws Exception {
+    	final XKMSCAServiceInfo info = (XKMSCAServiceInfo) serviceinfo;
+    	m_log.trace(">update: " + serviceinfo.getStatus());
+    	setStatus(serviceinfo.getStatus());
+    	if (info.getRenewFlag()) {
+    		// Renew The XKMS Signers certificate.
+    		this.init(ca);
+    	}
+    	// Only status is updated
+    	this.info = new XKMSCAServiceInfo(serviceinfo.getStatus(), getSubjectDN(), getSubjectAltName(), (String) data.get(KEYSPEC), (String) data.get(KEYALGORITHM), xKMScertificatechain);										         									    	 									  
+    	m_log.trace("<update: " + serviceinfo.getStatus());
+    }
 
-   /* 
-	* @see org.ejbca.core.model.ca.caadmin.extendedcaservices.ExtendedCAService#extendedService(org.ejbca.core.model.ca.caadmin.extendedcaservices.ExtendedCAServiceRequest)
-	*/   
-   public void update(ExtendedCAServiceInfo serviceinfo, CA ca) throws Exception{		   
-   	   XKMSCAServiceInfo info = (XKMSCAServiceInfo) serviceinfo; 
-	   m_log.trace(">update: " + serviceinfo.getStatus());
-	   setStatus(serviceinfo.getStatus());
-   	   if(info.getRenewFlag()){  	 
-   	     // Renew The XKMS Signers certificate.	                            	       		 										  
-		this.init(ca);
-   	   }  
-   	    	 
-   	   // Only status is updated
-	   this.info = new XKMSCAServiceInfo(serviceinfo.getStatus(),
-										  getSubjectDN(),
-										  getSubjectAltName(), 
-										  (String) data.get(KEYSPEC), 
-										  (String) data.get(KEYALGORITHM),
-	                                      xKMScertificatechain);										         									    	 									  
-	   m_log.trace("<update: " + serviceinfo.getStatus());
-   }   
-
-
-
-	/* 
-	 * @see org.ejbca.core.model.ca.caadmin.extendedcaservices.ExtendedCAService#extendedService(org.ejbca.core.model.ca.caadmin.extendedcaservices.ExtendedCAServiceRequest)
-	 */
-	public ExtendedCAServiceResponse extendedService(ExtendedCAServiceRequest request) throws ExtendedCAServiceRequestException, IllegalExtendedCAServiceRequestException,ExtendedCAServiceNotActiveException {
+    @Override
+	public ExtendedCAServiceResponse extendedService(final ExtendedCAServiceRequest request) throws ExtendedCAServiceRequestException, IllegalExtendedCAServiceRequestException,ExtendedCAServiceNotActiveException {
         m_log.trace(">extendedService");
         if (!(request instanceof XKMSCAServiceRequest)) {
             throw new IllegalExtendedCAServiceRequestException();            
@@ -218,68 +183,55 @@ public class XKMSCAService extends ExtendedCAService implements java.io.Serializ
 			throw new ExtendedCAServiceNotActiveException(msg);                            
         }
         ExtendedCAServiceResponse returnval = null;
-    	X509Certificate signerCert = (X509Certificate) xKMScertificatechain.get(0);
-        XKMSCAServiceRequest xKMSServiceReq = (XKMSCAServiceRequest)request;
-        
-        Document doc = xKMSServiceReq.getDoc();
-        if(xKMSServiceReq.isSign()){
-        	try{
-
-				org.apache.xml.security.signature.XMLSignature xmlSig = new org.apache.xml.security.signature.XMLSignature(doc, "", org.apache.xml.security.signature.XMLSignature.ALGO_ID_SIGNATURE_RSA_SHA1, org.apache.xml.security.c14n.Canonicalizer.ALGO_ID_C14N_EXCL_OMIT_COMMENTS);
-				org.apache.xml.security.transforms.Transforms transforms = new org.apache.xml.security.transforms.Transforms(doc);
-				transforms.addTransform(org.apache.xml.security.transforms.Transforms.TRANSFORM_ENVELOPED_SIGNATURE);
-				transforms.addTransform(org.apache.xml.security.transforms.Transforms.TRANSFORM_C14N_EXCL_OMIT_COMMENTS);
-				xmlSig.addDocument("#" + xKMSServiceReq.getId(), transforms, org.apache.xml.security.utils.Constants.ALGO_ID_DIGEST_SHA1);        			
+        final X509Certificate signerCert = (X509Certificate) xKMScertificatechain.get(0);
+        final XKMSCAServiceRequest xKMSServiceReq = (XKMSCAServiceRequest)request;
+        final Document doc = xKMSServiceReq.getDoc();
+        if (xKMSServiceReq.isSign()) {
+        	try {
+				XMLSignature xmlSig = new XMLSignature(doc, "", XMLSignature.ALGO_ID_SIGNATURE_RSA_SHA1, Canonicalizer.ALGO_ID_C14N_EXCL_OMIT_COMMENTS);
+				Transforms transforms = new Transforms(doc);
+				transforms.addTransform(Transforms.TRANSFORM_ENVELOPED_SIGNATURE);
+				transforms.addTransform(Transforms.TRANSFORM_C14N_EXCL_OMIT_COMMENTS);
+				xmlSig.addDocument("#" + xKMSServiceReq.getId(), transforms, Constants.ALGO_ID_DIGEST_SHA1);        			
 				xmlSig.addKeyInfo(signerCert);
-				doc.getDocumentElement().insertBefore( xmlSig.getElement() ,doc.getDocumentElement().getFirstChild());
+				doc.getDocumentElement().insertBefore(xmlSig.getElement() ,doc.getDocumentElement().getFirstChild());
 				xmlSig.sign(xKMSkey);
-				
         		returnval = new XKMSCAServiceResponse(doc);
-        	}catch (XMLSignatureException e) {
+        	} catch (XMLSignatureException e) {
         		throw new ExtendedCAServiceRequestException(e);
 			} catch (XMLSecurityException e) {
 				throw new ExtendedCAServiceRequestException(e);
 			}
         }
-        
         m_log.trace("<extendedService");		  		
 		return returnval;
-	}
+    }
 
-	
+    @Override
 	public float getLatestVersion() {		
-		return LATEST_VERSION;
+    	return LATEST_VERSION;
 	}
 
+    @Override
 	public void upgrade() {
-    	if(Float.compare(LATEST_VERSION, getVersion()) != 0) {
-		  // New version of the class, upgrade
-           
-
-		  data.put(VERSION, new Float(LATEST_VERSION));
-		}  		
+    	if (Float.compare(LATEST_VERSION, getVersion()) != 0) {
+    		// New version of the class, upgrade
+    		data.put(ExtendedCAServiceInfo.IMPLEMENTATIONCLASS, this.getClass().getName());	// For integration with CESeCore
+    		data.put(VERSION, new Float(LATEST_VERSION));
+    	}  		
 	}
 
-	/* 
-	 * @see org.ejbca.core.model.ca.caadmin.extendedcaservices.ExtendedCAService#getExtendedCAServiceInfo()
-	 */
+    @Override
 	public ExtendedCAServiceInfo getExtendedCAServiceInfo() {			
-		if(info == null){
-		  info = new XKMSCAServiceInfo(getStatus(),
-		                              getSubjectDN(),
-		                              getSubjectAltName(), 
-		                              (String) data.get(KEYSPEC), 
-		                              (String) data.get(KEYALGORITHM),
-		                              xKMScertificatechain);
-		}
-		
-		return this.info;
-	}
-    
-	
-	public String getSubjectDN(){
+    	if (info == null) {
+    		info = new XKMSCAServiceInfo(getStatus(), getSubjectDN(), getSubjectAltName(), (String) data.get(KEYSPEC), (String) data.get(KEYALGORITHM), xKMScertificatechain);
+    	}
+    	return info;
+    }
+
+	private String getSubjectDN() {
 		String retval = null;
-		String str = (String)data.get(SUBJECTDN);
+		final String str = (String)data.get(SUBJECTDN);
 		 try {
 			retval = new String(Base64.decode((str).getBytes("UTF-8")));
 		} catch (UnsupportedEncodingException e) {
@@ -289,22 +241,20 @@ public class XKMSCAService extends ExtendedCAService implements java.io.Serializ
 			m_log.debug("Old non base64 encoded DN: "+str);
 			retval = str; 
 		}
-		
 		return retval;		 
 	}
     
-	public void setSubjectDN(String dn){
-		
-		 try {
+	private void setSubjectDN(final String dn) {
+		try {
 			data.put(SUBJECTDN,new String(Base64.encode(dn.getBytes("UTF-8"),false)));
 		} catch (UnsupportedEncodingException e) {
 			m_log.error("Could not encode XKMS data from Base64",e);
 		}
 	}
 	
-	public String getSubjectAltName(){
+	private String getSubjectAltName() {
 		String retval = null;
-		String str= (String) data.get(SUBJECTALTNAME);
+		final String str = (String) data.get(SUBJECTALTNAME);
 		 try {
 			retval = new String(Base64.decode((str).getBytes("UTF-8")));
 		} catch (UnsupportedEncodingException e) {
@@ -314,17 +264,14 @@ public class XKMSCAService extends ExtendedCAService implements java.io.Serializ
 			m_log.debug("Old non base64 encoded altname: "+str);
 			retval = str; 
 		}
-		
 		return retval;		 
 	}
     
-	public void setSubjectAltName(String dn){
-		
-		 try {
+	private void setSubjectAltName(final String dn) {
+		try {
 			data.put(SUBJECTALTNAME,new String(Base64.encode(dn.getBytes("UTF-8"), false)));
 		} catch (UnsupportedEncodingException e) {
 			m_log.error("Could not encode XKMS data from Base64",e);
 		}
 	}
 }
-
